[package]
name = "jj-prek"
authors = ["Mark Fox"]
description = "Pre-commit hooks for jj (Jujutsu), following the PREK model"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
prek-identify = { workspace = true, features = ["serde"] }

anyhow = { workspace = true }
clap = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
itertools = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
